agregando navbar responsivo

--- a/login.html
+++ b/login.html
@@ -2,95 +2,57 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>Login</title>
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta http-equiv="expires" content="-1" />
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
-	<link rel="stylesheet" href="css/login.css" media="screen">
+    <meta charset="utf-8">
+    <title>Login</title>
+    <meta http-equiv="pragma" content="no-cache" />
+    <meta http-equiv="expires" content="-1" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
+    <link rel="stylesheet" href="css/login.css" media="screen">
+    <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
 
-
+    <script src="js/jquery-3.4.1.min.js " type="text/javascript"></script>
+    <script src="js/popper.min.js " type="text/javascript"></script>
+    <script src="js/bootstrap.min.js " type="text/javascript"></script>
 </head>
 
-<body class='login'>
-	$(if chap-id)
-	<form name="sendin" action="$(link-login-only)" method="post">
-		<input type="hidden" name="username" />
-		<input type="hidden" name="password" />
-		<input type="hidden" name="dst" value="$(link-orig)" />
-		<input type="hidden" name="popup" value="true" />
-	</form>
+<body>
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
 
-	<script type="text/javascript" src="md5.js"></script>
-	<script type="text/javascript">
-	< !--
-			function doLogin() {
-				document.sendin.username.value = document.login.username.value;
-				document.sendin.password.value = hexMD5('$(chap-id)' + document.login.password.value + '$(chap-challenge)');
-				document.sendin.submit();
-				return false;
-			}
-	//-->
-	</script>
-	$(endif)
-
-
-	<form class="vertical-form" name="login" action="$(link-login-only)" method="post" background="#A03472" $(if
-		chap-id) onSubmit="return doLogin()" $(endif)>
-		<input type="hidden" name="dst" value="$(link-orig)" />
-		<input type="hidden" name="popup" value="true" />
-		<div style="margin:0;padding:50;display:inline"></div>
-
-		<center>
-			<div id="head">
-			</div>
-
-			<div id="box">
-				<div id="userdiv">
-
-				</div>
-				<legend>
-					<p>Iniciar Sesión </p>
-				</legend>
-				<div>
-					<input id="user" autocomplete="on" name="username" type="text" value="$(username)"
-						placeholder="Usuario/PIN" />
-				</div>
-				<div id="passDiv">
-					<input id="pass" autocomplete="off" name="password" type="password" label="false"
-						placeholder="Password" />
-				</div>
-				<div>
-					<input id="boton" name="submit" type="submit" value=" " />
-				</div>
-			</div>
-		</center>
-
-		<!--<div class='pre-footer'>
-                        <p> https://asscitecnologia.com.mx</p><span><a href="tel:44 42 99 33 22">&#x1F4DE;44 42 99 33 22</a></span>
-                    </div>-->
-
-
-		<div class='footer'>
-			<p>$(if trial == 'yes')
-				<a id="freebot" class="button"
-					href="$(link-login-only)?dst=$(link-orig-esc)&amp;username=T-$(mac-esc)">&nbsp;</a>$(endif)
-			</p>
-			<p>$(if error)<span style="color: red; font-size: 16px">$(error)</span>$(endif)</p>
-			<br>
-			<p>
-			</p>
-		</div>
-	</form>
-
-	<script type="text/javascript">
-			< !--
-			document.login.username.focus();
-//-->
-	</script>
-	<script type="text/javascript">
-		document.oncontextmenu = function () { return false; }
-	</script>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Dropdown
+								</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+    </div>
 </body>
 
 </html>
